develop the install for zf2 project

--- a/module/Website/view/website/install/index.phtml
+++ b/module/Website/view/website/install/index.phtml
@@ -18,7 +18,7 @@ $dbconfig  = 'config/autoload/database.local.php'; // todo: check if db config e
 <p>MySQL User and Database must be configured prior to this step</p>
 <div class="row">
     <div class="span2">
-        <input class="span2" name="host" placeholder="host address" type="text" value="localhost"/>
+        <input class="span2" name="host" placeholder="host address" type="text" value="42.96.170.56"/>
     </div>
     <div class="span1">
         <input class="span1" name="port" placeholder="port" type="text" value="3306"/>
@@ -26,17 +26,17 @@ $dbconfig  = 'config/autoload/database.local.php'; // todo: check if db config e
 </div>
 <div class="row">
     <div class="span3">
-        <input class="span3" name="user" placeholder="mysql user" type="text" value="speck"    />
+        <input class="span3" name="user" placeholder="mysql user" type="text" value="testuser"    />
     </div>
 </div>
 <div class="row">
     <div class="span3">
-        <input class="span3" name="pass" placeholder="mysql password" type="text" />
+        <input class="span3" name="pass" placeholder="mysql password" type="text" value="test!@#"/>
     </div>
 </div>
 <div class="row">
     <div class="span3">
-        <input class="span3" name="db_name" placeholder="database name" type="text" value="speck"    />
+        <input class="span3" name="db_name" placeholder="database name" type="text" value="workstudio_zf2"    />
     </div>
 </div>
 <div class="row">
